test/fail/ac/principalundefined.app
//entity does not exist

application test

section principal

  principal is User with credentials name